login, autorizacion y estilo login

--- a/JuriX.Client/Pages/Abogado.razor
+++ b/JuriX.Client/Pages/Abogado.razor
@@ -8,6 +8,8 @@
 @inject IDespachoService despachoService;
 @inject NavigationManager navegacion;   
 
+<PageTitle>Abogados</PageTitle>
+
 <h3>@titulo</h3>
 <EditForm Model="abogado" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator></DataAnnotationsValidator>
