--- a/JuriX.Client/Pages/Caso.razor
+++ b/JuriX.Client/Pages/Caso.razor
@@ -9,6 +9,8 @@
 @inject ICasoService casoService;
 @inject NavigationManager navegacion;
 
+<PageTitle>Caso</PageTitle>
+
 <h3>@titulo</h3>
 
 <EditForm Model="caso" OnValidSubmit="OnValidSubmit">
