--- a/JuriX.Client/Pages/Cliente.razor
+++ b/JuriX.Client/Pages/Cliente.razor
@@ -7,6 +7,8 @@
 @inject IClienteService clienteService;
 @inject NavigationManager navegacion;
 
+<PageTitle>Cliente</PageTitle>
+
 <h3>@titulo</h3>
 <EditForm Model="cliente" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator></DataAnnotationsValidator>
