--- a/JuriX.Client/Pages/Despacho.razor
+++ b/JuriX.Client/Pages/Despacho.razor
@@ -7,6 +7,9 @@
 @inject IDespachoService despachoService;
 @inject NavigationManager navegacion;
 
+<PageTitle>Despacho</PageTitle>
+
+
 <h3>@titulo</h3>
 <EditForm Model="despacho" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator></DataAnnotationsValidator>
