--- a/JuriX.Client/Pages/Clientes.razor
+++ b/JuriX.Client/Pages/Clientes.razor
@@ -7,6 +7,8 @@
 @inject SweetAlertService Swal;
 @inject IClienteService clienteService;
 
+<PageTitle>Clientes</PageTitle>
+
 <h3>Clientes</h3>
 
 <a class="btn btn-success btn-sm mb-3" href="cliente">Nuevo Cliente</a>
