--- a/JuriX.Client/Pages/Despachos.razor
+++ b/JuriX.Client/Pages/Despachos.razor
@@ -7,6 +7,12 @@
 @inject SweetAlertService Swal;
 @inject IDespachoService despachoService;
 
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize(Roles = "Administrador")]
+
+<PageTitle>Despachos</PageTitle>
+
 <h3>Despachos</h3>
 
 <a class="btn btn-success btn-sm mb-3" href="despacho">Nuevo Despacho</a>
