--- a/JuriX.Client/Pages/Index.razor
+++ b/JuriX.Client/Pages/Index.razor
@@ -1,9 +1,38 @@
-﻿@page "/"
+﻿@page "/Index"
+
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize]
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+<AuthorizeView>
+    <Authorized>
+        <h1>Bienvenido @context.User.Identity!.Name</h1>
+    </Authorized>
+</AuthorizeView>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<body>
+    <div class="container">
+
+        <p>¡Bienvenido a JuriX!</p>
+
+        <p>Características destacadas:</p>
+        <ul>
+            <li>Visualización de cada caso.</li>
+            <li>Asignación y seguimiento de abogados responsables.</li>
+            <li>Historial de acciones y actualizaciones de cada caso.</li>
+            <li>Manejo de tu Despacho donde podras asignar a tus abogados.</li>
+        </ul>
+
+        <p>Estamos aquí para hacer tu experiencia lo más sencilla y efectiva posible. Si tienes alguna pregunta o necesitas asistencia, no dudes en ponerte en contacto con nuestro equipo de soporte.</p>
+
+        <p>Gracias por confiar en nosotros para gestionar tus casos legales. ¡Que tengas un día exitoso!</p>
+
+        <p>
+            Atentamente,<br>
+            JuriX
+        </p>
+    </div>
+</body>
